--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
   },
   "homepage": "https://github.com/Brridge-Group/hello-world#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "config": "^3.3.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "http-status-codes": "^2.1.4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.6",
     "password-generator": "^2.3.2",
     "react-router-dom": "^5.2.0"
