--- a/package.json
+++ b/package.json
@@ -1,38 +1,31 @@
 {
-  "name": "hello-world",
+  "name": "Lions-Gate-Hairr-TS",
   "version": "1.0.0",
-  "description": "This is a project template used as a starting point for any new project.",
-  "main": "app.js",
+  "main": "index.js",
+  "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
+    "dev": "ts-node-dev --respawn --transpile-only ./src/index.ts",
     "heroku-postbuild": "cd client && npm install && npm run build"
-  },
-  "engines": {
-    "node": "^14.17.4",
-    "npm": "^6.14.14"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Brridge-Group/hello-world.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/Brridge-Group/hello-world/issues"
   },
   "homepage": "https://github.com/Brridge-Group/hello-world#readme",
+  "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.5.2"
+  },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "config": "^3.3.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "http-status-codes": "^2.1.4",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.6",
-    "password-generator": "^2.3.2",
-    "react-router-dom": "^5.2.0"
+    "http-errors": "^1.8.1",
+    "mongoose": "^6.0.14"
   }
 }
