--- a/package.json
+++ b/package.json
@@ -1,31 +1,38 @@
 {
-  "name": "Lions-Gate-Hairr-TS",
+  "name": "lions-gate-hairr",
   "version": "1.0.0",
+  "description": "This is a project template used as a starting point for any new project.",
   "main": "index.js",
-  "license": "MIT",
-  "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only ./src/index.ts",
-    "heroku-postbuild": "cd client && npm install && npm run build"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Brridge-Group/hello-world.git"
-  },
-  "bugs": {
-    "url": "https://github.com/Brridge-Group/hello-world/issues"
-  },
-  "homepage": "https://github.com/Brridge-Group/hello-world#readme",
-  "devDependencies": {
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.5.2"
-  },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "http-errors": "^1.8.1",
-    "mongoose": "^6.0.14"
+    "mongoose": "^6.1.1"
+  },
+  "scripts": {
+    "start": "node dist/index.js",
+    "dev": "nodemon src/index.ts",
+    "build": "tsc -p .",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Brridge-Group/Lions-Gate-Hairr.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Brridge-Group/Lions-Gate-Hairr/issues"
+  },
+  "homepage": "https://github.com/Brridge-Group/Lions-Gate-Hairr#readme",
+  "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^16.11.12",
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.3"
   }
 }
