Fix Heroku hosting bugs.

--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "mongoose": "^6.1.1"
   },
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "npm run build && node dist/index.js",
     "dev": "nodemon src/index.ts",
     "build": "tsc -p .",
+    "heroku-postbuild": "cd client && npm install && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
