--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "This is a project template used as a starting point for any new project.",
   "main": "index.js",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.1"
   },
   "scripts": {
@@ -34,6 +37,6 @@
     "@types/node": "^16.11.12",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.3"
+    "typescript": "^4.5.4"
   }
 }
