--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^6.1.1"
+    "mongoose": "^6.1.1",
+    "mongoose-unique-validator": "^3.0.0"
   },
   "scripts": {
     "start": "node dist/index.js",
