--- a/client/package.json
+++ b/client/package.json
@@ -1,9 +1,10 @@
 {
   "name": "client",
-  "version": "0.1.0",
+  "version": "next",
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "@chakra-ui/react": "^1.8.7",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.14.1",
@@ -16,13 +17,17 @@
     "@types/react-router-dom": "^5.3.2",
     "@types/styled-components": "^5.1.16",
     "axios": "^0.25.0",
+    "dotenv": "^16.0.0",
+    "framer-motion": "^4.1.17",
+    "i": "^0.3.7",
     "jwt-decode": "^3.1.2",
+    "npm": "^8.5.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-file-base64": "^1.0.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.2.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.3",
