--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^6.1.1",
-    "mongoose-unique-validator": "^3.0.0",
     "express-validator": "^6.14.0",
     "http-status-codes": "^2.2.0",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.1.1",
+    "mongoose-unique-validator": "^3.0.0",
+    "react-toastify": "^8.2.0"
   },
   "scripts": {
     "start": "node dist/index.js",
