--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 /dist
 
 # misc
+**/.vscode
+.prettierrc.json
 .DS_Store
 .env.local
 .env.development.local
@@ -17,7 +19,10 @@
 .env.production.local
 .env
 
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
+lerna-debug.log*
+.pnpm-debug.log*
