--- a/client/.gitignore
+++ b/client/.gitignore
@@ -12,12 +12,18 @@
 /build
 
 # misc
+**/.vscode
+.prettierrc.json
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
