Revert "Fix (gitignore): Clean up"
This reverts commit 711474e215eb77a69081be07070a867851adb598.

--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,25 @@
-# Dependencies
+# dependencies
 /node_modules
 /.pnp
 .pnp.js
 
-# Testing
+# testing
 /coverage
 
-# Production
+# production
 /dist
 
-# Misc
+# misc
 **/.vscode
 **/.vscode/settings.json
 .prettierrc.json
 .DS_Store
-
-# Environment variable (dotenv ) files
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 .env
 
-# Logs
 logs
 *.log
 npm-debug.log*
