--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,17 +1,17 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Dependencies
+# dependencies
 /node_modules
 /.pnp
 .pnp.js
 
-# Testing
+# testing
 /coverage
 
-# Production
+# production
 /build
 
-# Misc
+# misc
 **/.vscode
 **/.vscode/settings.json
 .prettierrc.json
@@ -21,7 +21,6 @@
 .env.test.local
 .env.production.local
 
-# Logs
 logs
 *.log
 npm-debug.log*
