--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,30 @@
-# dependencies
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# Dependencies
 /node_modules
 /.pnp
 .pnp.js
 
-# testing
+# Testing
 /coverage
 
-# production
+# Production
 /dist
 
-# misc
+# Misc
 **/.vscode
 **/.vscode/settings.json
 .prettierrc.json
 .DS_Store
+
+# Environment variable (dotenv ) files
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 .env
 
+# Logs
 logs
 *.log
 npm-debug.log*
