--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,17 +1,17 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# Dependencies
 /node_modules
 /.pnp
 .pnp.js
 
-# testing
+# Testing
 /coverage
 
-# production
+# Production
 /build
 
-# misc
+# Misc
 **/.vscode
 **/.vscode/settings.json
 .prettierrc.json
@@ -21,6 +21,7 @@
 .env.test.local
 .env.production.local
 
+# Logs
 logs
 *.log
 npm-debug.log*
