Loading Added & EditProfile Button Fixed

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
+package-lock.json*
+package-lock.json
+client/package-lock.json
