--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "i": "^0.3.7",
     "jwt-decode": "^3.1.2",
     "npm": "^8.5.5",
+    "phosphor-react": "^1.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
