--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "npm": "^8.5.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
